--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <header>
+    <header class="header">
         <nav>
             <h3 class="nav-title">N<span class="text-primary">a</span>h<span class="text-primary">i</span>d</h3>
             <ul>
@@ -21,6 +21,16 @@
                 <button class="btn-primary">Hire Me</button>
             </ul>
         </nav>
+        <div class="banner">
+            <div>
+                <h3 class="banner-greetings">Hi, I  am</h3>
+                <h1 class="banner-title">Nazmul Nahid</h1>
+                <p>Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
+                <button class="btn-primary">Download CV</button>
+                <button class="btn-primary">Contact</button>
+            </div>
+            <img class="profile-pic" src="images/nahid.png" alt="">
+        </div>
     </header>
     <main>
 
