--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <header class="header">
+    <header class="header header-bg">
         <nav>
             <h3 class="nav-title">N<span class="text-primary">a</span>h<span class="text-primary">i</span>d</h3>
             <ul>
@@ -22,7 +22,7 @@
             </ul>
         </nav>
         <div class="banner">
-            <div>
+            <div class="banner-content">
                 <h3 class="banner-greetings">Hi, I  am</h3>
                 <h1 class="banner-title">Nazmul Nahid</h1>
                 <p>Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
@@ -33,7 +33,10 @@
         </div>
     </header>
     <main>
-
+        <section class="about-me">
+            <h3 class="section-title">About Me</h3>
+            <p class="section-description">I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and slick websites that provide real value to the end user. Thousands of clients have procured exceptional resulfs while working with me. Delivering work within time and budget which meets clients requirements in our mata.</p>
+        </section>
     </main>
     <footer>
 
