--- a/index.html
+++ b/index.html
@@ -94,12 +94,12 @@
         </section>
         <!-- Resume Section -->
         <section>
-            <h3 class="section-title ">A Summary of My Resume</h3>
+            <h3 class="section-title">A Summary of My Resume</h3>
             <div class="resume-container">
                 <div class="resume-column">
                     <h3 class="resume-column-title">My Education</h3>
                     <div class="resume-item">
-                        <h2 class="resum-item-title">Master in Computer Engineering</h2>
+                        <h2 class="resume-item-title">Master in Computer Engineering</h2>
                         <h3 class="resume-item-institute">Harvard University / 2015 - 2017</h3>
                         <p class="resume-item-description">List skill/technologies here. You can change the icon above
                             to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
@@ -107,7 +107,7 @@
                     </div>
                     <hr>
                     <div class="resume-item">
-                        <h2 class="resum-item-title">Master in Computer Engineering</h2>
+                        <h2 class="resume-item-title">Master in Computer Engineering</h2>
                         <h3 class="resume-item-institute">Harvard University / 2015 - 2017</h3>
                         <p class="resume-item-description">List skill/technologies here. You can change the icon above
                             to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
@@ -115,7 +115,7 @@
                     </div>
                     <hr>
                     <div class="resume-item">
-                        <h2 class="resum-item-title">Master in Computer Engineering</h2>
+                        <h2 class="resume-item-title">Master in Computer Engineering</h2>
                         <h3 class="resume-item-institute">Harvard University / 2015 - 2017</h3>
                         <p class="resume-item-description">List skill/technologies here. You can change the icon above
                             to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
@@ -125,7 +125,7 @@
                 <div class="resume-column">
                     <h3 class="resume-column-title">My Experience</h3>
                     <div class="resume-item">
-                        <h2 class="resum-item-title">Master in Computer Engineering</h2>
+                        <h2 class="resume-item-title">Master in Computer Engineering</h2>
                         <h3 class="resume-item-institute">Harvard University / 2015 - 2017</h3>
                         <p class="resume-item-description">List skill/technologies here. You can change the icon above
                             to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
@@ -133,7 +133,7 @@
                     </div>
                     <hr>
                     <div class="resume-item">
-                        <h2 class="resum-item-title">Master in Computer Engineering</h2>
+                        <h2 class="resume-item-title">Master in Computer Engineering</h2>
                         <h3 class="resume-item-institute">Harvard University / 2015 - 2017</h3>
                         <p class="resume-item-description">List skill/technologies here. You can change the icon above
                             to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
@@ -141,13 +141,16 @@
                     </div>
                     <hr>
                     <div class="resume-item">
-                        <h2 class="resum-item-title">Master in Computer Engineering</h2>
+                        <h2 class="resume-item-title">Master in Computer Engineering</h2>
                         <h3 class="resume-item-institute">Harvard University / 2015 - 2017</h3>
                         <p class="resume-item-description">List skill/technologies here. You can change the icon above
                             to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
                         </p>
                     </div>
                 </div>
+            </div>
+            <div class="download-cv">
+                <button class="btn-primary">Download CV</button>
             </div>
         </section>
     </main>
