--- a/index.html
+++ b/index.html
@@ -9,10 +9,13 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/style.css">
+    <script src="https://kit.fontawesome.com/da9af4df5f.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
+    <!-- Header Section -->
     <header class="header header-bg">
+        <!-- Navigation Bar -->
         <nav>
             <h3 class="nav-title">N<span class="text-primary">a</span>h<span class="text-primary">i</span>d</h3>
             <ul>
@@ -21,19 +24,24 @@
                 <button class="btn-primary">Hire Me</button>
             </ul>
         </nav>
+        <!-- Banner Section -->
         <div class="banner">
             <div class="banner-content">
                 <h3 class="banner-greetings">Hi, I am</h3>
                 <h1 class="banner-title">Nazmul Nahid</h1>
                 <p>Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society
                     behaved moments.</p>
-                <button class="btn-primary">Download CV</button>
-                <button class="btn-primary">Contact</button>
+                <div class="banner-btn">
+                    <button class="btn-primary"> <i class="fa-solid fa-download"></i> Download CV</button>
+                    <button class="btn-primary"><i class="fa-solid fa-phone"></i> Contact</button>
+                </div>
+
             </div>
             <img class="profile-pic" src="images/nahid.png" alt="">
         </div>
     </header>
     <main>
+        <!-- About Me -->
         <section class="about-me">
             <h3 class="section-title">About Me</h3>
             <p class="section-description">I, m a designer & developer with a passion for web design. I enjoy developing
@@ -59,6 +67,7 @@
                 </div>
             </div>
         </section>
+        <!-- What I Do/Skills -->
         <section>
             <h3 class="section-title">What I do</h3>
             <p id="what-i-do-description" class="section-description">I have more than 10 years experience building
@@ -92,9 +101,9 @@
                 </div>
             </div>
         </section>
-        <!-- Resume Section -->
+        <!-- Resume Summary Section -->
         <section>
-            <h3 class="section-title">A Summary of My Resume</h3>
+            <h3 class="section-title" style="margin-top: 80px;">A Summary of My Resume</h3>
             <div class="resume-container">
                 <div class="resume-column">
                     <h3 class="resume-column-title">My Education</h3>
@@ -150,12 +159,33 @@
                 </div>
             </div>
             <div class="download-cv">
-                <button class="btn-primary">Download CV</button>
+                <button class="btn-primary"><i class="fa-solid fa-download"></i> Download CV</button>
             </div>
         </section>
     </main>
+    <!-- Footer -->
     <footer>
-
+        <div class="footer-container">
+            <div class="footer-column">
+                <h3 class="footer-column-title">Let's Connect</h3>
+                <p class="footer-column-description">Please fill out the form on this section to contact with me or call
+                    between 9:00 A.M and 8.00 P.M ET, Monday through Friday.</p>
+                <div class="social-links">
+                    <a href=""><img src="images/icons/facebook.png" alt=""></a>
+                    <a href=""><img src="images/icons/insta.png" alt=""></a>
+                    <a href=""><img src="images/icons/twitter.png" alt=""></a>
+                </div>
+            </div>
+            <div class="footer-column">
+                <h3 class="footer-column-title">Let's Message me</h3>
+                <form action="" class="footer-column-form">
+                    <input type="text" class="footer-column-form-text" placeholder="Your Name">
+                    <input type="text" class="footer-column-form-text" placeholder="Your Email">
+                    <textarea name="" id="footer-textarea" cols="15" rows="5" placeholder="Message"></textarea>
+                    <button class="footer-column-form-submit btn-primary">Submit</button>
+                </form>
+            </div>
+        </div>
     </footer>
 </body>
 
